custom/themes/composites_lib_unb_ca/src/scss/style.scss
@import 'overrides/variables';

// Path to default bootstrap4 sass.
@import '../../../../../vendor/drupal/bootstrap4/dist/bootstrap/4.3.1/scss/bootstrap';

// Path to default bootstrap4 theme sass.
@import '../../../../../vendor/drupal/bootstrap4/scss/theme';

// Include custom sub theme.
@import 'custom/variables';

// Global (careful here).
// All links.
a {
  box-shadow: none !important;
}
// All input.
input {
  border-radius: .1rem !important;
  box-shadow: none !important;

  &:focus {
    border-color: $unb-turquoise !important;
  }
}
// Round borders.
input,
li,
a {
  border-radius: .1rem !important;
}
// Primary buttons.
.btn-primary {
  background-color: $unb-darkerred;
  border-color: $unb-darkerred;

  &:hover,
  &:focus,
  &:active {
    background-color: $unb-darkred !important;
    border-color: $unb-darkred !important;
  }
}
// All material-icons,
.material-icons {
  font-size: inherit !important;
}
// Collapse links.
a.comp-collapse {
  border: none !important;

  // Adjust.
  & ~ i {
    position: relative;
    top: 4px;
    left: -.2em;

    // Hide expanded arrow when collapsed.
    &.subs-expanded {
      display: none;
    }
  }

  // Show expanded arrow, hide collpased arrow when expanded.
  &[aria-expanded="true"] {

    & ~ i.subs-expanded {
      display:inline-block;
    }

    & ~ i.subs-collapsed {
      display: none;
    }
  }
}

// Header.
header {
  margin-left: auto;
  margin-right: auto;
  // Branding.
  & div.block-system-branding-block {
    & a > span {
      font-size: 1.5rem !important;
      font-weight: 400;
    }

    & h1 {
      margin-bottom: 0 !important;
      font-size: 1.5rem !important;
    }

    // Branding link.
    & a.navbar-brand {
      &:active,
      &:focus,
      &:focus-within,
      &:hover {
        background-color: inherit !important;
        color: $unb-darkerred;
        box-shadow: none !important;
      }
    }
  }
  // Main navigation.
  & div.region-header + nav.navbar {
    padding: 0px;
    background-color: $unb-darkgray;
    font-weight: 500;

    & a,
    & span {
      color: white !important;

      &:active,
      &.is-active,
      &:focus,
      &:focus-within,
      &:hover {
        background-color: $unb-darkerred !important;
        box-shadow: none !important;
        cursor: pointer;
      }

      &:not(.dropdown-item) {
        padding: 1em;
      }
    }

    & a.dropdown-item {
      &:active,
      &:focus,
      &:focus-within {
        background-color: initial;
        color: initial;
        box-shadow: none !important;
      }
    }

    & div.dropdown-menu {
      background-color: $unb-darkgray;
      border-radius: .1rem;
      border: none;

      & > a {
        color: $unb-halfgray;
      }
    }

    & button.navbar-toggler {
      border: none;

      &:before {
        content: "Menu";
      }

      &:active,
      &:focus,
      &:focus-within {
        outline: none !important;
      }
    }
  }
}
// End Header.

// Main.
main[role="main"] {
  // Content.
  & div.region.region-content {
    // Slideshow.
    & div.views_slideshow_slide,
    & div.views_slideshow_cycle_teaser_section {
      width: 100% !important;
      height: 300px;

      & img {
        object-fit: cover;
        max-width: 100%;
        height: 300px;
        -webkit-box-shadow: none;
        -moz-box-shadow: none;
        box-shadow: none;
        border: 1px solid $unb-darkgray;
      }
    }
    // Slideshow controls.
    #views_slideshow_controls_text_slideshow-block_1 {
      position: absolute;
      top: 0px;
      left: 0px;
      z-index: 50;
      height: 300px;
      width: 100%;
    }

    #views_slideshow_controls_text_pause_slideshow-block_1 a {
      display: none;
    }

    #views_slideshow_controls_text_previous_slideshow-block_1 a,
    #views_slideshow_controls_text_next_slideshow-block_1 a {
      visibility: visible !important;
      position: absolute;
      z-index: 100;
      top: 38%;
      font-size: 4em !important;
      color: white !important;
      opacity: .7;
    }

    #views_slideshow_controls_text_previous_slideshow-block_1 a {
      left: .5%;
    }

    #views_slideshow_controls_text_next_slideshow-block_1 a {
      right: .5%;
    }

    #views_slideshow_controls_text_previous_slideshow-block_1 a:hover,
    #views_slideshow_controls_text_next_slideshow-block_1 a:hover {
      opacity: 1;
      border: 0;
    }

    #views_slideshow_cycle_main_slideshow-block_1 {
      margin-bottom: 10px;
    }
    // Display subjects multi-value field as columns.
    & dl > dd > ul.comp-subjects {
      columns: 3;
    }
    // Give images in content region an instant photo look.
    & img {
      max-width: 100%;
      height: auto;
      object-fit: cover;
      -webkit-box-shadow: 4px 4px 8px lightgrey;
      -moz-box-shadow: 4px 4px 8px lightgrey;
      box-shadow: 4px 4px 8px lightgrey;
      border: 6px solid white;
    }
    // Blocks.
    & div.block {
      margin-top: 0.7em;
      // Links.
      & a:not(.btn),
      & a:not(.btn):focus {
        color: $unb-turquoise;
        background: initial;
      }
      // Collapse subjects.
      & a.comp-collapse {
        border: initial !important;
      }
      // Link status.
      & a:not(.btn):hover {
        border-bottom: 1px solid;
        background-color: initial;
        color: $unb-darkerred;
        transition: color 0.15s ease-in, border-color 0.15s ease-in;
        box-shadow: none !important;
      }

      // OpenSeadragon viewer.
      & div#seadragon-viewer {
        margin-top: 2em;
        height: 800px;
      }
    }
    // Main content block.
    & div#block-mainpagecontent {
      width: 95%;
      margin: auto;

      // Titles/headers.
      & h1 {
        display: inline-table;
        margin-bottom: 1rem;
        font-size: 2.4rem;
      }

      & h2 {
        font-size: 1.8rem;
      }

      // Subtitles.
      .node-subtitle {
        font-size: 1.4rem;
      }

      // Description lists.
      & dl {
        margin-bottom: 1.5rem;
      }

      // Paragraph.
      & p {
        text-align: justify;
      }

      // Nodes.
      div.node__content {
        margin-top: 1em;
      }
      // Edit subjects tab.
      div.view-edit-composite-subjects {
        margin-bottom: 1em;
        padding-bottom: 0.5em;
        border-bottom: 1px solid $unb-halfgray;
      }
    }
    // Titles.
    & div.block#block-pagetitle {

      & em {
        font-style: normal !important;
      }

      & h1 {
        padding-left: 2rem;
        text-align: left !important;
        font-size: 2.2rem;
        font-weight: 500;
        line-height: 1.2;
      }
    }

    // Blocks except main content and titles.
    & div.block:not(#block-mainpagecontent):not(#block-pagetitle) {
      background-color: $unb-halfgray;
      // Headers.
      & h1,
      & h2 {
        font-size: 1.4em;
      }
      // Links.
      & a {
        color: $unb-darkred;
      }
    }
    // Node forms.
    & .node-form {
      .field--name-field-top-x,
      .field--name-field-top-y,
      .field--name-field-bottom-x,
      .field--name-field-bottom-y {
        width: 20%;
        display: inline-block;
      }

      .form-item-field-image-0-alt {
        display: none;
      }

      .image-preview {
        margin-bottom: 1rem;
      }

      #edit-field-image-0--description {
        margin-top: 1rem;
      }

      .js-form-file {
        min-height: 3rem;
      }

      #edit-field-grad-ceremony-0-uri--description ul li:last-of-type {
        display: none;
      }

      #edit-field-composite {
        -webkit-appearance: none;
        -moz-appearance: none;
        pointer-events: none;
      }

      #edit-delete {
        display: none;
      }
    }

    // Search and browse blocks.
    & div[id*="block-exposedformsearch-subjectspage-1"],
    & div#block-browse {
      display: inline-block;
      padding: 1em 1.4em;
    }

    & div[id*="block-exposedformsearch-subjectspage-1"] {
      width: 70%;

      & div.form-item-search-api-fulltext {
        width: 90%;
      }

      & div#edit-actions {
        display: inline-block;

        & input#edit-submit-search-subjects {
          height: calc(1.5em + 0.75rem + 2px);
        }
      }
    }
    // Browse block.
    & div#block-browse {
      height: 8.5em;
      width: 29%;
      float: right;
    }
    // Facet blocks.
    & div.block.block-facets {
      padding: 1em 1.4em;

      & h3 {
        font-size: 1em;
      }

      & ul.js-facets-links {
        list-style-type: none;
        padding-left: 0;

        & > li {
          display: inline;
          padding: 0 2px 0 8px;

          &:not(:first-of-type) {
            border-left: 1px solid;
          }
        }

        & a.is-active {
          font-weight: bolder;

          & span.facet-item__status {
            display: none;
          }
        }
      }
    }
    // Views.
    & div.view:not(.view-slideshow) {
      margin-top: 2em;
      // View header.
      div.view-header {
        padding-bottom: 0.5em;
        border-bottom: 1px solid $unb-halfgray;
        color: $unb-gray;
      }
      // Unordered lists.
      ul:not(.composite-subjects) {
        margin-top: 1.5em;
        list-style: none;
      }

      ul.composite-subjects {
        columns: 3;
      }
    }
    // Browse by year.
    & div.view-browse-composites {
      // Item list.
      & > div.view-content > div.item-list {
        margin-top: 2em;
        margin-left: 1.5em;

        &:not(:last-of-type) > ul > li,
        & > ul > li:not(:last-of-type) {
          padding-bottom: 1em;
          border-bottom: 1px solid $unb-halfgray;
        }

        & div.collapse > div.item-list > ul {
          columns: 2;
        }
      }
    }
  }
  // Nav pager.
  & nav.pager {
    margin-top: 4em;
    text-align: center;

    & a:hover,
    & a:focus {
      color: $unb-turquoise !important;
    }
  }
}
// End Main.

// Footer.
footer > div.container {
  margin-top: 1em;
  margin-bottom: 1em;
  border-top: 1px solid $unb-halfgray;
  padding-top: 1em;

  & div#footer-logo-div, div#footer-menu-div {
    padding-left: 0;

    & img#footer-logo-img {
      max-width: 260px;
    }
  }

  & a, a:hover, a:focus {
    background-color: initial;
    box-shadow: none;
  }
}
//End footer.

// Responsive.
@media (min-width: 1200px) {
  // Header.
  header {
    width: 1110px;
  }
}
@media (min-width: 992px) and (max-width: 1199px) {
  // Header.
  header {
    width: 930px;
  }
}
@media (min-width: 768px) and (max-width: 991px) {
  // Header.
  header {
    width: 690px;
  }
  // Exposed search.
  div[id*="block-exposedformsearch-subjectspage-1"] {
    width: 70%;

    & div.form-item-search-api-fulltext {
      width: 87% !important;
    }
  }
}
@media (min-width: 500px) and (max-width: 767px) {
  // Header.
  header {
    width: 510px;
  }
  // Exposed search.
  div[id*="block-exposedformsearch-subjectspage-1"] {
    width: 70%;

    & div.form-item-search-api-fulltext {
      width: 78% !important;
    }
  }
}
@media (max-width: 520px) {
  // Header.
  header {
    width: 490px;
  }
}
// End Responsive.

